--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
     <dependencies>
 
 
-
         <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -41,7 +40,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.37.Final</version>
+            <version>4.1.63.Final</version>
         </dependency>
         <!---->
 
@@ -57,27 +56,27 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>2.5.7</version>
+            <version>2.5.14</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-xml -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-xml</artifactId>
-            <version>2.5.7</version>
+            <version>2.5.14</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-json -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-json</artifactId>
-            <version>2.5.7</version>
+            <version>2.5.14</version>
         </dependency>
 
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.47</version>
+            <version>5.1.49</version>
         </dependency>
 
         <!--todo check-->
@@ -90,7 +89,7 @@
         <dependency>
             <groupId>org.mvel</groupId>
             <artifactId>mvel2</artifactId>
-            <version>2.4.4.Final</version>
+            <version>2.4.12.Final</version>
         </dependency>
 
 
@@ -99,7 +98,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
-            <version>2.5.0</version>
+            <version>2.9.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency>
@@ -112,35 +111,37 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.12</version>
+            <version>1.15</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.9</version>
+            <version>3.12.0</version>
         </dependency>
 
 
-
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.1-jre</version>
+            <version>30.1.1-jre</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.11.3</version>
+            <version>1.13.1</version>
         </dependency>
 
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.8</version>
+            <version>2.12.3</version>
         </dependency>
-
 
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
@@ -173,7 +174,9 @@
                     <execution>
                         <id>copy-dep</id>
                         <phase>prepare-package</phase>
-                        <goals><goal>copy-dependencies</goal></goals>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
                         <configuration>
                             <outputDirectory>lib</outputDirectory>
                             <overWriteIfNewer>true</overWriteIfNewer>
@@ -185,52 +188,52 @@
 
             <!-- We use the maven-shade plugin to create a fat jar that contains all necessary dependencies. -->
             <!-- Change the value of <mainClass>...</mainClass> if your program entry point changes. -->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-shade-plugin</artifactId>-->
-<!--                <version>3.0.0</version>-->
-<!--                <executions>-->
-<!--                    &lt;!&ndash; Run shade goal on package phase &ndash;&gt;-->
-<!--                    <execution>-->
-<!--                        <phase>package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>shade</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <artifactSet>-->
-<!--                                <excludes>-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-shade-plugin</artifactId>-->
+            <!--                <version>3.0.0</version>-->
+            <!--                <executions>-->
+            <!--                    &lt;!&ndash; Run shade goal on package phase &ndash;&gt;-->
+            <!--                    <execution>-->
+            <!--                        <phase>package</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>shade</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <artifactSet>-->
+            <!--                                <excludes>-->
 
-<!--                                    &lt;!&ndash;                                    <exclude>org.slf4j:*</exclude>&ndash;&gt;-->
-<!--                                    &lt;!&ndash;                                    <exclude>log4j:*</exclude>&ndash;&gt;-->
-<!--                                </excludes>-->
-<!--                            </artifactSet>-->
-<!--                            <filters>-->
-<!--                                <filter>-->
-<!--                                    &lt;!&ndash; Do not copy the signatures in the META-INF folder.-->
-<!--                                    Otherwise, this might cause SecurityExceptions when using the JAR. &ndash;&gt;-->
-<!--                                    <artifact>*:*</artifact>-->
-<!--                                    <excludes>-->
-<!--                                        <exclude>META-INF/*.SF</exclude>-->
-<!--                                        <exclude>META-INF/*.DSA</exclude>-->
-<!--                                        <exclude>META-INF/*.RSA</exclude>-->
-<!--                                    </excludes>-->
-<!--                                </filter>-->
-<!--                            </filters>-->
-<!--                            <transformers>-->
-<!--                                <transformer-->
-<!--                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-<!--                                    <mainClass>com.mapkc.nsfw.Main</mainClass>-->
-<!--                                </transformer>-->
+            <!--                                    &lt;!&ndash;                                    <exclude>org.slf4j:*</exclude>&ndash;&gt;-->
+            <!--                                    &lt;!&ndash;                                    <exclude>log4j:*</exclude>&ndash;&gt;-->
+            <!--                                </excludes>-->
+            <!--                            </artifactSet>-->
+            <!--                            <filters>-->
+            <!--                                <filter>-->
+            <!--                                    &lt;!&ndash; Do not copy the signatures in the META-INF folder.-->
+            <!--                                    Otherwise, this might cause SecurityExceptions when using the JAR. &ndash;&gt;-->
+            <!--                                    <artifact>*:*</artifact>-->
+            <!--                                    <excludes>-->
+            <!--                                        <exclude>META-INF/*.SF</exclude>-->
+            <!--                                        <exclude>META-INF/*.DSA</exclude>-->
+            <!--                                        <exclude>META-INF/*.RSA</exclude>-->
+            <!--                                    </excludes>-->
+            <!--                                </filter>-->
+            <!--                            </filters>-->
+            <!--                            <transformers>-->
+            <!--                                <transformer-->
+            <!--                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+            <!--                                    <mainClass>com.mapkc.nsfw.Main</mainClass>-->
+            <!--                                </transformer>-->
 
-<!--                                <transformer-->
-<!--                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">-->
-<!--                                    <resource>reference.conf</resource>-->
-<!--                                </transformer>-->
-<!--                            </transformers>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <!--                                <transformer-->
+            <!--                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">-->
+            <!--                                    <resource>reference.conf</resource>-->
+            <!--                                </transformer>-->
+            <!--                            </transformers>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -238,6 +241,8 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+
                 </configuration>
             </plugin>
         </plugins>
@@ -246,44 +251,44 @@
             <plugins>
 
                 <!-- This improves the out-of-the-box experience in Eclipse by resolving some warnings. -->
-<!--                <plugin>-->
-<!--                    <groupId>org.eclipse.m2e</groupId>-->
-<!--                    <artifactId>lifecycle-mapping</artifactId>-->
-<!--                    <version>1.0.0</version>-->
-<!--                    <configuration>-->
-<!--                        <lifecycleMappingMetadata>-->
-<!--                            <pluginExecutions>-->
-<!--                                <pluginExecution>-->
-<!--                                    <pluginExecutionFilter>-->
-<!--                                        <groupId>org.apache.maven.plugins</groupId>-->
-<!--                                        <artifactId>maven-shade-plugin</artifactId>-->
-<!--                                        <versionRange>[3.0.0,)</versionRange>-->
-<!--                                        <goals>-->
-<!--                                            <goal>shade</goal>-->
-<!--                                        </goals>-->
-<!--                                    </pluginExecutionFilter>-->
-<!--                                    <action>-->
-<!--                                        <ignore/>-->
-<!--                                    </action>-->
-<!--                                </pluginExecution>-->
-<!--                                <pluginExecution>-->
-<!--                                    <pluginExecutionFilter>-->
-<!--                                        <groupId>org.apache.maven.plugins</groupId>-->
-<!--                                        <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                                        <versionRange>[3.1,)</versionRange>-->
-<!--                                        <goals>-->
-<!--                                            <goal>testCompile</goal>-->
-<!--                                            <goal>compile</goal>-->
-<!--                                        </goals>-->
-<!--                                    </pluginExecutionFilter>-->
-<!--                                    <action>-->
-<!--                                        <ignore/>-->
-<!--                                    </action>-->
-<!--                                </pluginExecution>-->
-<!--                            </pluginExecutions>-->
-<!--                        </lifecycleMappingMetadata>-->
-<!--                    </configuration>-->
-<!--                </plugin>-->
+                <!--                <plugin>-->
+                <!--                    <groupId>org.eclipse.m2e</groupId>-->
+                <!--                    <artifactId>lifecycle-mapping</artifactId>-->
+                <!--                    <version>1.0.0</version>-->
+                <!--                    <configuration>-->
+                <!--                        <lifecycleMappingMetadata>-->
+                <!--                            <pluginExecutions>-->
+                <!--                                <pluginExecution>-->
+                <!--                                    <pluginExecutionFilter>-->
+                <!--                                        <groupId>org.apache.maven.plugins</groupId>-->
+                <!--                                        <artifactId>maven-shade-plugin</artifactId>-->
+                <!--                                        <versionRange>[3.0.0,)</versionRange>-->
+                <!--                                        <goals>-->
+                <!--                                            <goal>shade</goal>-->
+                <!--                                        </goals>-->
+                <!--                                    </pluginExecutionFilter>-->
+                <!--                                    <action>-->
+                <!--                                        <ignore/>-->
+                <!--                                    </action>-->
+                <!--                                </pluginExecution>-->
+                <!--                                <pluginExecution>-->
+                <!--                                    <pluginExecutionFilter>-->
+                <!--                                        <groupId>org.apache.maven.plugins</groupId>-->
+                <!--                                        <artifactId>maven-compiler-plugin</artifactId>-->
+                <!--                                        <versionRange>[3.1,)</versionRange>-->
+                <!--                                        <goals>-->
+                <!--                                            <goal>testCompile</goal>-->
+                <!--                                            <goal>compile</goal>-->
+                <!--                                        </goals>-->
+                <!--                                    </pluginExecutionFilter>-->
+                <!--                                    <action>-->
+                <!--                                        <ignore/>-->
+                <!--                                    </action>-->
+                <!--                                </pluginExecution>-->
+                <!--                            </pluginExecutions>-->
+                <!--                        </lifecycleMappingMetadata>-->
+                <!--                    </configuration>-->
+                <!--                </plugin>-->
             </plugins>
         </pluginManagement>
 
